feat: implement instructors and training sessions
